Updated form controls markup

--- a/index.html
+++ b/index.html
@@ -127,45 +127,45 @@
                       <input type="hidden" name="tip" value="reprezentant">
                       <div class="form-group required">
                         <label class="control-label" for="prenume-reprezentat">Prenume:</label>
-                        <input type="text" class="form-control" id="prenume-reprezentat" name="prenume" placeholder="Andrei">
+                        <input type="text" class="form-control" id="prenume-reprezentat" name="prenume" placeholder="Andrei" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="nume-reprezentant">Nume de familie:</label>
-                        <input type="text" class="form-control" id="nume-reprezentant" name="nume" placeholder="Popescu">
+                        <input type="text" class="form-control" id="nume-reprezentant" name="nume" placeholder="Popescu" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="email-reprezentant">Email:</label>
-                        <input type="email" class="form-control" id="email-reprezentant" name="email" placeholder="andrei.popescu@usr.ro">
+                        <input type="email" class="form-control" id="email-reprezentant" name="email" placeholder="andrei.popescu@usr.ro" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="telefon-reprezentant">Număr de telefon:</label>
-                        <input type="text" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="07xx-xxx-xxx">
+                        <input type="text" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="07xx-xxx-xxx" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="cnp-reprezentant">CNP:</label>
-                        <input type="text" class="form-control" id="cnp-reprezentant" name="cnp" placeholder="SAALLZZJJNNNC">
+                        <input type="text" class="form-control" id="cnp-reprezentant" name="cnp" placeholder="SAALLZZJJNNNC" required>
                       </div>
                       <div class="row">
                         <div class="col-xs-4">
                           <div class="form-group required">
                             <label class="control-label" for="serie-reprezentant">Serie:</label>
-                            <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XX">
+                            <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XX" required>
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
                             <label class="control-label" for="numar-reprezentant">Număr:</label>
-                            <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="xxxxxx">
+                            <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="xxxxxx" required>
                           </div>
                         </div>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="adresa-reprezentant">Adresa din buletin:</label>
-                        <textarea class="form-control" id="adresa-reprezentant" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
+                        <textarea class="form-control" id="adresa-reprezentant" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti" required></textarea>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="regiune-reprezentant">Județul/regiunea unde vreau să fiu repartizat:</label>
-                        <select class="form-control" id="regiune-reprezentant" name="regiune">
+                        <select class="form-control" id="regiune-reprezentant" name="regiune" required>
                           <option class="hidden" selected disabled>&mdash;</option>
                           <option value="Diaspora">Diaspora</option>
                           <option value="Alba">Alba</option>
@@ -230,7 +230,7 @@
                       </div>
                       <div class="checkbox required">
                         <label class="control-label">
-                          <input type="checkbox" name="confirmare">
+                          <input type="checkbox" name="confirmare" required>
                           Confirm pe propria răspundere că nu sunt membru sau rudă
                         </label>
                       </div>
@@ -243,45 +243,45 @@
                       <input type="hidden" name="tip" value="delegat">
                       <div class="form-group required">
                         <label class="control-label" for="prenume-delegat">Prenume:</label>
-                        <input type="text" class="form-control" id="prenume-delegat" name="prenume" placeholder="Andrei">
+                        <input type="text" class="form-control" id="prenume-delegat" name="prenume" placeholder="Andrei" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="nume-delegat">Nume de familie:</label>
-                        <input type="text" class="form-control" id="nume-delegat" name="nume" placeholder="Popescu">
+                        <input type="text" class="form-control" id="nume-delegat" name="nume" placeholder="Popescu" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="email-delegat">Email:</label>
-                        <input type="email" class="form-control" id="email-delegat" name="email" placeholder="andrei.popescu@usr.ro">
+                        <input type="email" class="form-control" id="email-delegat" name="email" placeholder="andrei.popescu@usr.ro" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="telefon-delegat">Număr de telefon:</label>
-                        <input type="text" class="form-control" id="telefon-delegat" name="telefon" placeholder="07xx-xxx-xxx">
+                        <input type="text" class="form-control" id="telefon-delegat" name="telefon" placeholder="07xx-xxx-xxx" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="cnp-delegat">CNP:</label>
-                        <input type="text" class="form-control" id="cnp-delegat" name="cnp" placeholder="SAALLZZJJNNNC">
+                        <input type="text" class="form-control" id="cnp-delegat" name="cnp" placeholder="SAALLZZJJNNNC" required>
                       </div>
                       <div class="row">
                         <div class="col-xs-4">
                           <div class="form-group required">
                             <label class="control-label" for="serie-delegat">Serie:</label>
-                            <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XX">
+                            <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XX" required>
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
                             <label class="control-label" for="numar-delegat">Număr:</label>
-                            <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="xxxxxx">
+                            <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="xxxxxx" required>
                           </div>
                         </div>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="adresa-delegat">Adresa din buletin:</label>
-                        <textarea class="form-control" id="adresa-delegat" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
+                        <textarea class="form-control" id="adresa-delegat" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti" required></textarea>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="regiune-delegat">Județul/regiunea unde vreau să fiu repartizat:</label>
-                        <select class="form-control" id="regiune-delegat" name="regiune">
+                        <select class="form-control" id="regiune-delegat" name="regiune" required>
                           <option class="hidden" selected disabled>&mdash;</option>
                           <option value="Diaspora">Diaspora</option>
                           <option value="Alba">Alba</option>
