Added form validation rules

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="telefon-reprezentant">Număr de telefon:</label>
-                        <input type="text" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="07xx-xxx-xxx" required>
+                        <input type="tel" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="07xxxxxxxx" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="cnp-reprezentant">CNP:</label>
@@ -255,7 +255,7 @@
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="telefon-delegat">Număr de telefon:</label>
-                        <input type="text" class="form-control" id="telefon-delegat" name="telefon" placeholder="07xx-xxx-xxx" required>
+                        <input type="tel" class="form-control" id="telefon-delegat" name="telefon" placeholder="07xxxxxxxx" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="cnp-delegat">CNP:</label>
