--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="telefon-reprezentant">Număr de telefon:</label>
-                        <input type="tel" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="07xxxxxxxx" required>
+                        <input type="tel" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="+40 7xx xxx xxx" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="cnp-reprezentant">CNP:</label>
@@ -149,13 +149,13 @@
                         <div class="col-xs-4">
                           <div class="form-group required">
                             <label class="control-label" for="serie-reprezentant">Serie:</label>
-                            <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XX" required>
+                            <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XY" required>
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
                             <label class="control-label" for="numar-reprezentant">Număr:</label>
-                            <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="xxxxxx" required>
+                            <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="123456" required>
                           </div>
                         </div>
                       </div>
@@ -255,7 +255,7 @@
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="telefon-delegat">Număr de telefon:</label>
-                        <input type="tel" class="form-control" id="telefon-delegat" name="telefon" placeholder="07xxxxxxxx" required>
+                        <input type="tel" class="form-control" id="telefon-delegat" name="telefon" placeholder="+40 7xx xxx xxx" required>
                       </div>
                       <div class="form-group required">
                         <label class="control-label" for="cnp-delegat">CNP:</label>
@@ -265,13 +265,13 @@
                         <div class="col-xs-4">
                           <div class="form-group required">
                             <label class="control-label" for="serie-delegat">Serie:</label>
-                            <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XX" required>
+                            <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XY" required>
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
                             <label class="control-label" for="numar-delegat">Număr:</label>
-                            <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="xxxxxx" required>
+                            <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="123456" required>
                           </div>
                         </div>
                       </div>
