--- a/index.html
+++ b/index.html
@@ -504,7 +504,10 @@
                           Confirm pe propria răspundere că nu sunt membru sau rudă
                         </label>
                       </div>
-                      <div class="g-recaptcha" data-sitekey="6LcJvQsUAAAAANyRcfLvhPMuS6tp9Z2ngT8TLUlg"></div>
+                      <div class="form-group">
+                        <div class="g-recaptcha" data-sitekey="6LcJvQsUAAAAANyRcfLvhPMuS6tp9Z2ngT8TLUlg"></div>
+                        <input type="hidden" name="recaptcha">
+                      </div>
                       <small class="help-block">Prin completarea prezentului formular, persoana vizată își exprimă consimțământul pentru prelucrarea datelor sale cu caracter personal de către Uniunea Salvați România, în scopul desemnării de reprezentanți si delegați în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016, și pentru comunicarea acestor date cu caracter personal către birourile și oficiile electorale competente, în conformitate cu dispozițiile art. 15 alin. (5), art. 89 alin. (11) din Legea nr. 208/2015 privind alegerea Senatului și a Camerei Deputaților, și art. 5 din Decizia Biroului Electoral Central nr. 73D/21.10.2016 privind unele măsuri pentru buna organizare și desfășurare a alegerilor pentru Senat și Camera Deputaților din data de 11 decembrie 2016. Nefurnizarea datelor cu caracter personal cerute prin prezentul formular atrage imposibilitatea desemnării persoanei vizate ca reprezentant sau delegat al Uniunii Salvați România în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016. În conformitate cu dispozițiile Legii nr. 677/2001 pentru protecția persoanelor cu privire la prelucrarea datelor cu caracter personal și libera circulație a acestor date, persoana vizată își poate exercita dreptul de acces la date, dreptul de intervenție asupra datelor sau dreptul de opoziție justificată, prin transmiterea unei cereri scrise, datate și semnate către Uniunea Salvați România, la adresa de email <a href="mailto:alegeri@usr.ro">alegeri@usr.ro</a>.</small>
                       <button class="btn btn-default" type="submit">Vreau alegeri corecte!</button>
                       <span class="spinner" aria-hidden="true"></span>
@@ -880,7 +883,10 @@
                         <label class="control-label" for="observatii-delegat">Observații:</label>
                         <textarea class="form-control" id="observatii-delegat" name="observatii" rows="3"></textarea>
                       </div>
-                      <div class="g-recaptcha" data-sitekey="6LcJvQsUAAAAANyRcfLvhPMuS6tp9Z2ngT8TLUlg"></div>
+                      <div class="form-group">
+                        <div class="g-recaptcha" data-sitekey="6LcJvQsUAAAAANyRcfLvhPMuS6tp9Z2ngT8TLUlg"></div>
+                        <input type="hidden" name="recaptcha">
+                      </div>
                       <small class="help-block">Prin completarea prezentului formular, persoana vizată își exprimă consimțământul pentru prelucrarea datelor sale cu caracter personal de către Uniunea Salvați România, în scopul desemnării de reprezentanți si delegați în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016, și pentru comunicarea acestor date cu caracter personal către birourile și oficiile electorale competente, în conformitate cu dispozițiile art. 15 alin. (5), art. 89 alin. (11) din Legea nr. 208/2015 privind alegerea Senatului și a Camerei Deputaților, și art. 5 din Decizia Biroului Electoral Central nr. 73D/21.10.2016 privind unele măsuri pentru buna organizare și desfășurare a alegerilor pentru Senat și Camera Deputaților din data de 11 decembrie 2016. Nefurnizarea datelor cu caracter personal cerute prin prezentul formular atrage imposibilitatea desemnării persoanei vizate ca reprezentant sau delegat al Uniunii Salvați România în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016. În conformitate cu dispozițiile Legii nr. 677/2001 pentru protecția persoanelor cu privire la prelucrarea datelor cu caracter personal și libera circulație a acestor date, persoana vizată își poate exercita dreptul de acces la date, dreptul de intervenție asupra datelor sau dreptul de opoziție justificată, prin transmiterea unei cereri scrise, datate și semnate către Uniunea Salvați România, la adresa de email <a href="mailto:alegeri@usr.ro">alegeri@usr.ro</a>.</small>
                       <button class="btn btn-default" type="submit">Vreau alegeri corecte!</button>
                     </form>
@@ -938,7 +944,7 @@
     <script src="assets/vendor/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
     <script src="assets/vendor/jvectormap/jquery-jvectormap.min.js"></script>
     <script src="assets/app/js/application.min.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?hl=ro"></script>
+    <script src="https://www.google.com/recaptcha/api.js?hl=ro&onload=recaptchaInit&render=explicit"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
