--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <textarea class="form-control" id="adresa-reprezentant" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti" required></textarea>
                       </div>
                       <div class="form-group required">
-                        <label class="control-label" for="regiune-reprezentant">Județul/regiunea unde vreau să fiu repartizat:</label>
+                        <label class="control-label" for="regiune-reprezentant">Județul/regiunea unde vreau să fiu repartizat(ă):</label>
                         <select class="form-control" id="regiune-reprezentant" name="regiune" required>
                           <option class="hidden" selected disabled>&mdash;</option>
                           <option value="Diaspora">Diaspora</option>
@@ -555,7 +555,7 @@
                         <textarea class="form-control" id="adresa-delegat" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti" required></textarea>
                       </div>
                       <div class="form-group required">
-                        <label class="control-label" for="regiune-delegat">Județul/regiunea unde vreau să fiu repartizat:</label>
+                        <label class="control-label" for="regiune-delegat">Județul/regiunea unde vreau să fiu repartizat(ă):</label>
                         <select class="form-control" id="regiune-delegat" name="regiune" required>
                           <option class="hidden" selected disabled>&mdash;</option>
                           <option value="Diaspora">Diaspora</option>
