Updated form input and recaptcha reset

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                       <div class="checkbox required">
                         <label class="control-label">
                           <input type="checkbox" name="confirmare" required>
-                          Confirm pe propria răspundere că nu sunt membru sau rudă
+                          Confirm pe propria răspundere că nu sunt candidat sau rudă de până la gradul 2 a unui candidat
                         </label>
                       </div>
                       <div class="form-group required">
