--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   <li role="presentation"><a href="#delegat" aria-controls="delegat" role="tab" data-toggle="tab">Delegat</a></li>
                 </ul>
                 <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane active" id="reprezentat">
+                  <div role="tabpanel" class="tab-pane fade in active" id="reprezentat">
                     <form class="form-reprezentant" method="post">
                       <input type="hidden" name="tip" value="reprezentant">
                       <div class="checkbox">
@@ -523,7 +523,7 @@
                       <span class="spinner" aria-hidden="true"></span>
                     </form>
                   </div>
-                  <div role="tabpanel" class="tab-pane" id="delegat">
+                  <div role="tabpanel" class="tab-pane fade" id="delegat">
                     <form class="form-delegat" method="post">
                       <input type="hidden" name="tip" value="delegat">
                       <div class="form-group required">
