--- a/index.html
+++ b/index.html
@@ -182,50 +182,50 @@
                           <option value="Diaspora">Diaspora</option>
                           <option value="Alba">Alba</option>
                           <option value="Arad">Arad</option>
-                          <option value="Argeș">Argeș</option>
-                          <option value="Bacău">Bacău</option>
+                          <option value="Arges">Arges</option>
+                          <option value="Bacau">Bacau</option>
                           <option value="Bihor">Bihor</option>
-                          <option value="Bistrița-Năsăud">Bistrița-Năsăud</option>
-                          <option value="Botoșani">Botoșani</option>
-                          <option value="Brașov">Brașov</option>
-                          <option value="Brăila">Brăila</option>
-                          <option value="București - Sector 1">București - Sector 1</option>
-                          <option value="București - Sector 2">București - Sector 2</option>
-                          <option value="București - Sector 3">București - Sector 3</option>
-                          <option value="București - Sector 4">București - Sector 4</option>
-                          <option value="București - Sector 5">București - Sector 5</option>
-                          <option value="București - Sector 6">București - Sector 6</option>
-                          <option value="Buzău">Buzău</option>
-                          <option value="Caraș-Severin">Caraș-Severin</option>
-                          <option value="Călărași">Călărași</option>
+                          <option value="Bistrita-Nasaud">Bistrita-Nasaud</option>
+                          <option value="Botosani">Botosani</option>
+                          <option value="Brasov">Brasov</option>
+                          <option value="Braila">Braila</option>
+                          <option value="Bucuresti - Sector 1">Bucuresti - Sector 1</option>
+                          <option value="Bucuresti - Sector 2">Bucuresti - Sector 2</option>
+                          <option value="Bucuresti - Sector 3">Bucuresti - Sector 3</option>
+                          <option value="Bucuresti - Sector 4">Bucuresti - Sector 4</option>
+                          <option value="Bucuresti - Sector 5">Bucuresti - Sector 5</option>
+                          <option value="Bucuresti - Sector 6">Bucuresti - Sector 6</option>
+                          <option value="Buzau">Buzau</option>
+                          <option value="Caras Severin">Caras Severin</option>
+                          <option value="Calarasi">Calarasi</option>
                           <option value="Cluj">Cluj</option>
-                          <option value="Constanța">Constanța</option>
+                          <option value="Constanta">Constanta</option>
                           <option value="Covasna">Covasna</option>
-                          <option value="Dâmbovița">Dâmbovița</option>
+                          <option value="Dambovita">Dambovita</option>
                           <option value="Dolj">Dolj</option>
-                          <option value="Galați">Galați</option>
+                          <option value="Galati">Galati</option>
                           <option value="Giurgiu">Giurgiu</option>
                           <option value="Gorj">Gorj</option>
                           <option value="Harghita">Harghita</option>
                           <option value="Hunedoara">Hunedoara</option>
-                          <option value="Ialomița">Ialomița</option>
-                          <option value="Iași">Iași</option>
+                          <option value="Ialomita">Ialomita</option>
+                          <option value="Iasi">Iasi</option>
                           <option value="Ilfov">Ilfov</option>
-                          <option value="Maramureș">Maramureș</option>
-                          <option value="Mehedinți">Mehedinți</option>
-                          <option value="Mureș">Mureș</option>
-                          <option value="Neamț">Neamț</option>
+                          <option value="Maramures">Maramures</option>
+                          <option value="Mehedinti">Mehedinti</option>
+                          <option value="Mures">Mures</option>
+                          <option value="Neamt">Neamt</option>
                           <option value="Olt">Olt</option>
                           <option value="Prahova">Prahova</option>
                           <option value="Satu Mare">Satu Mare</option>
-                          <option value="Sălaj">Sălaj</option>
+                          <option value="Salaj">Salaj</option>
                           <option value="Sibiu">Sibiu</option>
                           <option value="Suceava">Suceava</option>
                           <option value="Teleorman">Teleorman</option>
-                          <option value="Timiș">Timiș</option>
+                          <option value="Timis">Timis</option>
                           <option value="Tulcea">Tulcea</option>
                           <option value="Vaslui">Vaslui</option>
-                          <option value="Vâlcea">Vâlcea</option>
+                          <option value="Valcea">Valcea</option>
                           <option value="Vrancea">Vrancea</option>
                         </select>
                       </div>
@@ -570,51 +570,50 @@
                           <option value="Diaspora">Diaspora</option>
                           <option value="Alba">Alba</option>
                           <option value="Arad">Arad</option>
-                          <option value="Argeș">Argeș</option>
-                          <option value="Bacău">Bacău</option>
+                          <option value="Arges">Arges</option>
+                          <option value="Bacau">Bacau</option>
                           <option value="Bihor">Bihor</option>
-                          <option value="Bistrița-Năsăud">Bistrița-Năsăud</option>
-                          <option value="Botoșani">Botoșani</option>
-                          <option value="Brașov">Brașov</option>
-                          <option value="Brăila">Brăila</option>
-                          <option value="București">București</option>
-                          <option value="București - Sector 1">București - Sector 1</option>
-                          <option value="București - Sector 2">București - Sector 2</option>
-                          <option value="București - Sector 3">București - Sector 3</option>
-                          <option value="București - Sector 4">București - Sector 4</option>
-                          <option value="București - Sector 5">București - Sector 5</option>
-                          <option value="București - Sector 6">București - Sector 6</option>
-                          <option value="Buzău">Buzău</option>
-                          <option value="Caraș-Severin">Caraș-Severin</option>
-                          <option value="Călărași">Călărași</option>
+                          <option value="Bistrita-Nasaud">Bistrita-Nasaud</option>
+                          <option value="Botosani">Botosani</option>
+                          <option value="Brasov">Brasov</option>
+                          <option value="Braila">Braila</option>
+                          <option value="Bucuresti - Sector 1">Bucuresti - Sector 1</option>
+                          <option value="Bucuresti - Sector 2">Bucuresti - Sector 2</option>
+                          <option value="Bucuresti - Sector 3">Bucuresti - Sector 3</option>
+                          <option value="Bucuresti - Sector 4">Bucuresti - Sector 4</option>
+                          <option value="Bucuresti - Sector 5">Bucuresti - Sector 5</option>
+                          <option value="Bucuresti - Sector 6">Bucuresti - Sector 6</option>
+                          <option value="Buzau">Buzau</option>
+                          <option value="Caras Severin">Caras Severin</option>
+                          <option value="Calarasi">Calarasi</option>
                           <option value="Cluj">Cluj</option>
-                          <option value="Constanța">Constanța</option>
+                          <option value="Constanta">Constanta</option>
                           <option value="Covasna">Covasna</option>
-                          <option value="Dâmbovița">Dâmbovița</option>
+                          <option value="Dambovita">Dambovita</option>
                           <option value="Dolj">Dolj</option>
-                          <option value="Galați">Galați</option>
+                          <option value="Galati">Galati</option>
                           <option value="Giurgiu">Giurgiu</option>
                           <option value="Gorj">Gorj</option>
                           <option value="Harghita">Harghita</option>
                           <option value="Hunedoara">Hunedoara</option>
-                          <option value="Ialomița">Ialomița</option>
-                          <option value="Iași">Iași</option>
+                          <option value="Ialomita">Ialomita</option>
+                          <option value="Iasi">Iasi</option>
                           <option value="Ilfov">Ilfov</option>
-                          <option value="Maramureș">Maramureș</option>
-                          <option value="Mehedinți">Mehedinți</option>
-                          <option value="Mureș">Mureș</option>
-                          <option value="Neamț">Neamț</option>
+                          <option value="Maramures">Maramures</option>
+                          <option value="Mehedinti">Mehedinti</option>
+                          <option value="Mures">Mures</option>
+                          <option value="Neamt">Neamt</option>
                           <option value="Olt">Olt</option>
                           <option value="Prahova">Prahova</option>
                           <option value="Satu Mare">Satu Mare</option>
-                          <option value="Sălaj">Sălaj</option>
+                          <option value="Salaj">Salaj</option>
                           <option value="Sibiu">Sibiu</option>
                           <option value="Suceava">Suceava</option>
                           <option value="Teleorman">Teleorman</option>
-                          <option value="Timiș">Timiș</option>
+                          <option value="Timis">Timis</option>
                           <option value="Tulcea">Tulcea</option>
                           <option value="Vaslui">Vaslui</option>
-                          <option value="Vâlcea">Vâlcea</option>
+                          <option value="Valcea">Valcea</option>
                           <option value="Vrancea">Vrancea</option>
                         </select>
                       </div>
