--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                       <div class="checkbox required">
                         <label class="control-label">
                           <input type="checkbox" name="acord" required>
-                          Sunt de acord cu salvarea datelor
+                          Sunt de acord să intru in baza de date USR
                         </label>
                       </div>
                       <div class="form-group">
@@ -898,7 +898,7 @@
                       <div class="checkbox required">
                         <label class="control-label">
                           <input type="checkbox" name="acord" required>
-                          Sunt de acord cu salvarea datelor
+                          Sunt de acord să intru in baza de date USR
                         </label>
                       </div>
                       <div class="form-group">
