Updated fields labels

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
                       <div class="row">
                         <div class="col-xs-4">
                           <div class="form-group required">
-                            <label class="control-label" for="serie-reprezentant">Serie:</label>
+                            <label class="control-label" for="serie-reprezentant">Serie CI:</label>
                             <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XY" required>
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
-                            <label class="control-label" for="numar-reprezentant">Număr:</label>
+                            <label class="control-label" for="numar-reprezentant">Număr CI:</label>
                             <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="123456" required>
                           </div>
                         </div>
@@ -548,13 +548,13 @@
                       <div class="row">
                         <div class="col-xs-4">
                           <div class="form-group required">
-                            <label class="control-label" for="serie-delegat">Serie:</label>
+                            <label class="control-label" for="serie-delegat">Serie CI:</label>
                             <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XY" required>
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
-                            <label class="control-label" for="numar-delegat">Număr:</label>
+                            <label class="control-label" for="numar-delegat">Număr CI:</label>
                             <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="123456" required>
                           </div>
                         </div>
