--- a/index.html
+++ b/index.html
@@ -937,11 +937,11 @@
                     </form>
                   </div>
                 </div>
-                <div class="alert alert-success" role="alert">
+                <div class="alert alert-success hidden" role="alert">
                   <strong>Felicitări!</strong>
                   Solicitarea de înscriere a fost trimisă cu succes.
                 </div>
-                <div class="alert alert-danger" role="alert">
+                <div class="alert alert-danger hidden" role="alert">
                   <strong>Atenție!</strong>
                   Solicitarea de înscriere nu a fost trimisă, încercați din nou.
                 </div>
