--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                 <h3 class="media-heading">Înscrie-te ca reprezentat sau delegat</h3>
                 <dl>
                   <dt>Reprezentant</dt>
-                  <dd>Membru în biroul electoral al unei secții de votare din partea USR. Participă la procesul de vot de la deschiderea secției (6 dimineața) până la încheierea proceselor verbale cu rezultatul alegerilor din acea secție (1-2 noaptea). Este remunerat de stat.</dd>
+                  <dd>Membru în biroul electoral al unei secții de votare din partea USR. Participă la procesul de vot de la deschiderea secției (6 dimineața) până la încheierea proceselor verbale cu rezultatul alegerilor din acea secție (1-2 noaptea). Este remunerat de către stat.</dd>
                 <dl>
                 </dl>
                   <dt>Delegat</dt>
-                  <dd>Are dreptul de a asista la procesul de votare din partea USR. Poate face sesizări dacă observă nereguli. Perioada critică care trebuie acoperit este numărarea voturilor (de la 9 seara până la 1-2 noaptea).</dd>
+                  <dd>Are dreptul de a asista la procesul de votare din partea USR. Poate face sesizări dacă observă nereguli. Perioada critică care trebuie acoperită este numărarea voturilor (de la 9 seara până la 1-2 noaptea).</dd>
                 </dl>
               </div>
             </li>
