Updated email template

--- a/email.html
+++ b/email.html
@@ -107,6 +107,7 @@
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Bună Andrei,</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Felicitări! Solicitarea de înscriere a fost trimisă cu succes.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant<br>Dacă nu sunt atribuit ca reprezentat, sunt de acord să fiu și delegat</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Prenume:</b><br>Andrei</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Nume de familie:</b><br>Popescu</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Email:</b><br>andrei.popescu@usr.ro</p>
@@ -119,7 +120,8 @@
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Localitatea unde doresc să activez:</b><br>Curtea de Argeș</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Țara:</b><br>Romania</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Observații:</b><br>&mdash;</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Îți mulțumim pentru înscriere!</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Ne trebuie cât mai mulți reprezentanți și delegați care să supravegheze procesul de votare, așa că te rugăm să vorbești cu prietenii, familia și vecinii tăi să completeze și ei formularul.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Termenul limită de înscriere a reprezenților este pe 25 noiembrie, iar al delegaților pe 4 decembrie.</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;" width="100%">
                           <tbody>
                             <tr>
@@ -135,6 +137,8 @@
                             </tr>
                           </tbody>
                         </table>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">În scurt timp vei fi contactat de echipa noastră pentru a stabili exact în ce secție de votare vei fi reprezentant/delegat al USR.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Îți mulțumim pentru înscriere!</p>
                       </td>
                     </tr>
                   </table>
