--- a/email.html
+++ b/email.html
@@ -107,7 +107,7 @@
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Bună Andrei,</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Felicitări! Solicitarea de înscriere a fost trimisă cu succes.</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant<br>Dacă nu sunt atribuit ca reprezentat, sunt de acord să fiu și delegat</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant<br>Dacă nu sunt atribuit ca reprezentant, sunt de acord să fiu și delegat</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Prenume:</b><br>Andrei</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Nume de familie:</b><br>Popescu</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Email:</b><br>andrei.popescu@usr.ro</p>
