--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
           <ul class="media-list">
             <li class="media">
               <div class="media-left">
-                <img class="media-object" src="assets/app/img/icon-inscriere.png" alt="Înscrie-te ca reprezentat sau delegat">
+                <img class="media-object" src="assets/app/img/icon-inscriere.png" alt="Înscrie-te ca reprezentant sau delegat">
               </div>
               <div class="media-body">
-                <h3 class="media-heading">Înscrie-te ca reprezentat sau delegat</h3>
+                <h3 class="media-heading">Înscrie-te ca reprezentant sau delegat</h3>
                 <dl>
                   <dt>Reprezentant</dt>
                   <dd>Membru în biroul electoral al unei secții de votare din partea USR. Participă la procesul de vot de la deschiderea secției (6 dimineața) până la încheierea proceselor verbale cu rezultatul alegerilor din acea secție (1-2 noaptea). Este remunerat de către stat.</dd>
@@ -120,17 +120,17 @@
                 <p>Ne trebuie cât mai mulți reprezentanți și delegați care să supravegheze procesul de votare, așa că te rugăm să vorbești cu prietenii, familia și vecinii tăi să completeze și ei formularul.</p>
                 <p>Vreau să fiu:</p>
                 <ul class="nav nav-pills nav-justified" role="tablist">
-                  <li role="presentation" class="active"><a href="#reprezentat" aria-controls="reprezentat" role="tab" data-toggle="tab">Reprezentant</a></li>
+                  <li role="presentation" class="active"><a href="#reprezentant" aria-controls="reprezentant" role="tab" data-toggle="tab">Reprezentant</a></li>
                   <li role="presentation"><a href="#delegat" aria-controls="delegat" role="tab" data-toggle="tab">Delegat</a></li>
                 </ul>
                 <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane fade in active" id="reprezentat">
+                  <div role="tabpanel" class="tab-pane fade in active" id="reprezentant">
                     <form class="form-reprezentant" method="post">
                       <input type="hidden" name="tip" value="reprezentant">
                       <div class="checkbox">
                         <label class="control-label">
                           <input type="checkbox" name="delegat" checked>
-                          Dacă nu sunt atribuit ca reprezentat, sunt de acord să fiu și delegat
+                          Dacă nu sunt atribuit ca reprezentant, sunt de acord să fiu și delegat
                         </label>
                       </div>
                       <div class="checkbox required">
@@ -142,8 +142,8 @@
                       <div class="row">
                         <div class="col-xs-6">
                           <div class="form-group required">
-                            <label class="control-label" for="prenume-reprezentat">Prenume:</label>
-                            <input type="text" class="form-control" id="prenume-reprezentat" name="prenume" placeholder="Andrei" required>
+                            <label class="control-label" for="prenume-reprezentant">Prenume:</label>
+                            <input type="text" class="form-control" id="prenume-reprezentant" name="prenume" placeholder="Andrei" required>
                           </div>
                         </div>
                         <div class="col-xs-6">
