--- a/email.html
+++ b/email.html
@@ -107,7 +107,8 @@
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Bună Andrei,</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Felicitări! Solicitarea de înscriere a fost trimisă cu succes.</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant<br>Dacă nu sunt atribuit ca reprezentant, sunt de acord să fiu și delegat</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">În scurt timp vei fi contactat de echipa noastră pentru a stabili exact în ce secție de votare vei fi reprezentant/delegat al USR.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant<br>Dacă nu sunt atribuit ca reprezentant, sunt de acord să fiu și delegat<br>Confirm pe propria răspundere că nu sunt candidat sau rudă de până la gradul 2 a unui candidat</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Prenume:</b><br>Andrei</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Nume de familie:</b><br>Popescu</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Email:</b><br>andrei.popescu@usr.ro</p>
@@ -121,7 +122,6 @@
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Țara:</b><br>Romania</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Observații:</b><br>&mdash;</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Ne trebuie cât mai mulți reprezentanți și delegați care să supravegheze procesul de votare, așa că te rugăm să vorbești cu prietenii, familia și vecinii tăi să completeze și ei formularul.</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Termenul limită de înscriere a reprezenților este pe 25 noiembrie, iar al delegaților pe 4 decembrie.</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;" width="100%">
                           <tbody>
                             <tr>
@@ -129,7 +129,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;" valign="top" bgcolor="#3498db" align="center"><a href="https://usr.ro/" target="_blank" style="display: inline-block; color: #ffffff; background-color: #3498db; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; border-color: #3498db;">Continuăm mai departe împreună!</a></td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;" valign="top" bgcolor="#3498db" align="center"><a href="https://www.facebook.com/sharer.php?u=https://alegeri.usr.ro/" target="_blank" style="display: inline-block; color: #ffffff; background-color: #3498db; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; border-color: #3498db;">Distribuie pe Facebook</a></td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -137,7 +137,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">În scurt timp vei fi contactat de echipa noastră pentru a stabili exact în ce secție de votare vei fi reprezentant/delegat al USR.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Termenul limită de înscriere a reprezenților este pe 25 noiembrie, iar al delegaților pe 4 decembrie.</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Îți mulțumim pentru înscriere!</p>
                       </td>
                     </tr>
